--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">GallerIQUII</string>
+    <string name="intent_imagesListExtra_key">data</string>
+    <string name="intent_position_key">pos</string>
+    <string name="connection_status">You are %1$s</string>
 </resources>
